# desafio-cadastro-das-cartas-no-super-trunfo-EduBez

./: .gitignore  CMakeLists.txt  CartasSuperTrunfo.c
